# solana-lottery

./: README.md  TODO.md  docker-compose.yml  justfile
program/: Cargo.toml  README.md  coverage.just  justfile
program/francium/lending-pool/: Cargo.toml
program/francium/lending-pool/src/: entrypoint.rs  error.rs  instruction.rs  instructions_wrapper.rs  lib.rs  processor.rs  state.rs
program/francium/lending-pool/src/math/: decimal.rs
program/francium/lending-rewards-pool/: Cargo.toml
program/francium/lending-rewards-pool/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  utils.rs
program/francium/lending-rewards-pool/src/state/: farming_pool.rs  farming_user.rs  mod.rs  test.rs  token.rs
program/local-test-env/: docker-compose.yml
program/local-test-env/validator/: entrypoint.sh  validator.Dockerfile
program/local-test-env/validator/setup/: setup.ts
program/local-test-env/validator/setup/keys/: investor.json  nezha-vrf.json  usdc.json
program/local-test-env/validator/setup/staking/: accounts.ts  buffer_utils.ts  instructions.ts
program/nez-cli/: Cargo.toml
program/nez-cli/src/: instruction.rs  main.rs  util.rs
program/nezha-staking/: Cargo.toml
program/nezha-staking-cli/: Cargo.toml  README.md  justfile
program/nezha-staking-cli/keys/: user.json
program/nezha-staking-cli/src/: main.rs
program/nezha-staking-lib/: Cargo.toml  DEVELOP.txt
program/nezha-staking-lib/src/: lib.rs
program/nezha-staking-lib/src/accounts/: account_type.rs  mod.rs  pda.rs  tests.rs
program/nezha-staking-lib/src/error/: conversions.rs  mod.rs  tests.rs
program/nezha-staking-lib/src/fixed_point/: mod.rs  test_utils.rs  tests.rs
program/nezha-staking-lib/src/francium/: accounts.rs  constants.rs  instruction.rs  mod.rs
program/nezha-staking-lib/src/instruction/: fns.rs  mod.rs
program/nezha-staking-lib/src/state/: latest_epoch.rs  mod.rs  return_rate.rs  stake_calculation.rs  stake_update.rs  utils.rs
program/nezha-staking-lib/src/state/epoch/: mod.rs  status.rs  tickets.rs
program/nezha-staking-lib/src/state/stake/: mod.rs
program/nezha-staking-lib/src/state/winners/: meta.rs  mod.rs  page.rs
program/nezha-staking/docs/: instructions.txt  state_accounts.txt
program/nezha-staking/src/: lib.rs  solana.rs  utils.rs
program/nezha-staking/src/processor/: mod.rs  stake_update.rs  winners.rs
program/nezha-staking/src/processor/investment/: francium.rs  manual.rs  mod.rs  returns.rs  tests.rs
program/nezha-staking/tests/integration/: account_names.rs  accounts.rs  actions.rs  create_epoch.rs  end_to_end_account_mutations.rs  francium.rs  main.rs  returns.rs  rotate_key.rs  setup.rs  winners.rs
program/nezha-staking/tests/integration/processors/: francium.rs  mod.rs
program/nezha-staking/tests/integration/stake_update/: common.rs  deposits.rs  mod.rs  (+3 more)
program/nezha-testing/: Cargo.toml
program/nezha-testing/src/: lib.rs  mutations.rs
program/nezha-testing/src/solana_emulator/: mem.rs  mod.rs  syscall_stubs.rs  system_program.rs
program/nezha-testing/src/solana_test_runtime/: bpf.rs  emulated.rs  mod.rs
program/nezha-utils/: Cargo.toml
program/nezha-utils/src/: account_meta.rs  borsh_deserialize.rs  checks.rs  lib.rs  load_accounts.rs
program/nezha-utils/src/borsh_length/: array.rs  bounded_string.rs  bounded_vec.rs  macros.rs  mod.rs  option.rs  primitives.rs  solana.rs
program/nezha-utils/src/pda/: macros.rs  mod.rs  seed_component.rs  small_vec.rs
program/nezha-vrf/: Cargo.toml  notes.txt
program/nezha-vrf-cli/: Cargo.toml
program/nezha-vrf-cli/src/: main.rs
program/nezha-vrf-lib/: Cargo.toml
program/nezha-vrf-lib/src/: lib.rs  switchboard.rs  utils.rs
program/nezha-vrf-lib/src/accounts/: account_type.rs  mod.rs  tests.rs  verify.rs
program/nezha-vrf-lib/src/error/: conversions.rs  mod.rs  tests.rs
program/nezha-vrf-lib/src/instruction/: fns.rs  mod.rs
program/nezha-vrf-lib/src/state/: has_account_type.rs  mod.rs  program_state.rs  vrf_request.rs
program/nezha-vrf-mock/: Cargo.toml
program/nezha-vrf-mock/src/: entrypoint.rs  lib.rs
program/nezha-vrf-mock/src/processor/: mod.rs
program/nezha-vrf/docs/: actors.txt  epoch_states.txt
program/nezha-vrf/src/: lib.rs  switchboard.rs  utils.rs
program/nezha-vrf/src/processor/: mod.rs  rotate_key.rs  switchboard.rs
program/nezha-vrf/tests/integration/: account_names.rs  accounts.rs  actions.rs  end_to_end_account_mutations.rs  init.rs  main.rs  request_vrf.rs  rotate_key.rs  setup.rs
program/staking/: Cargo.toml  README.md
program/staking/src/: lib.rs
program/staking/tests/: common.rs  staking.rs  util.rs
workspace/: Anchor.toml  Cargo.toml  DEPLOY.md  README.md  nez-mint-keypair.json  tsconfig.json
workspace/arweave/uploader/: Cargo.toml
workspace/arweave/uploader/src/: bundlr.rs  data.rs  dataitem.rs  deephash.rs  lib.rs  tag.rs
workspace/arweave/uploader/tests/: bundlr.rs
workspace/backend/lottery/api/: Cargo.toml  schema.graphql
workspace/backend/lottery/indexer/: Cargo.toml
workspace/backend/lottery/service/: Cargo.toml
workspace/backend/lottery/store/: Cargo.toml  Dockerfile
workspace/clients/nez-token/: .ammanrc.js  .base-ammanrc.js  .solitarc.js  README.md  package-lock.json  package.json
workspace/clients/nez-token/idl/: staking.json
workspace/clients/nez-token/src/: consts.ts  index.ts
workspace/clients/nez-token/test/: stake.test.ts
workspace/clients/nezha-game/: README.md  package-lock.json  package.json  tsconfig.json
workspace/clients/nezha-game/demo/: README.md  constants.ts  create_fake_usdc.ts  main.ts
workspace/clients/nezha-game/staking/: accounts.ts  buffer_utils.ts  instructions.ts  state.ts  state_utils.ts
workspace/clients/nezha-game/utils/: utils.ts
workspace/risq-api-client/: Cargo.toml
workspace/risq-api-client/src/: lib.rs
workspace/risq-api-client/src/client/: client.rs  errors.rs  mod.rs  reqwest_client.rs
workspace/risq-api-client/src/resources/: mod.rs
workspace/risq-api-client/tests/: integration_tests.rs
workspace/utils/: Cargo.toml
workspace/utils/src/: lib.rs
(+314 files in other folders)
