[package]
name = "nez-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = {workspace=true}
anyhow = "1.0.69"
clap = { version = "3.2.23", features = ["cargo", "env"] }
solana-clap-utils = {workspace=true}
solana-client = {workspace=true}
solana-program = {workspace=true}
solana-sdk = {workspace=true}
spl-associated-token-account = {workspace = true}
spl-token = {workspace = true}
url = "2.3.1"
staking = { path = "../staking" }
