[package]
name = "nezha_staking_lib"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
default = []

# this feature enables fakes/mocks for development
dev = []
test-bpf = ['dev']

[dependencies]
arrayref = "0.3.6"
borsh.workspace = true
num-derive = "0.3.3"
num-traits = { version = "0.2.15", default-features = false }
solana-program = {workspace = true}
spl-token = { workspace = true, features = ["no-entrypoint"] }
thiserror = "1.0.30"
uint = "0.8"
francium-lending-pool = { path = "../francium/lending-pool", features = ["no-entrypoint"] }
francium-lending-rewards-pool = { package = "farming-pool", path = "../francium/lending-rewards-pool", features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
static-pubkey = "1.0.3"
nezha-utils = { path = "../nezha-utils" }
nezha_vrf_lib = { path = "../nezha-vrf-lib" }

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
