[package]
name = "nezha_vrf_lib"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
default = []
test-bpf = ['dev']
dev = []
client = []

[dependencies]
arrayref = "0.3.6"
borsh = { workspace = true }
num-derive = "0.3.3"
num-traits = { version = "0.2.15", default-features = false }
solana-program = {workspace = true}
spl-token = { workspace = true, features = ["no-entrypoint"] }
thiserror = "1.0.30"
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
static-pubkey = "1.0.3"
switchboard-v2.workspace = true
anchor-lang.workspace = true
rand = { version = "=0.7.3" }
nezha-utils = { path = "../nezha-utils" }

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
