[package]
name = "nezha_vrf_mock"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
default = []
test-bpf = ['dev']
dev = []
client = []

[dependencies]
arrayref = "0.3.6"
borsh = { workspace = true }
num-derive = "0.3.3"
num-traits = { version = "0.2.15", default-features = false }
solana-program = {workspace = true}
spl-token = { workspace = true, features = ["no-entrypoint"] }
thiserror = "1.0.30"
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
static-pubkey = "1.0.3"
anchor-lang.workspace = true
rand = { version = "=0.7.3" }
nezha-utils = { path = "../nezha-utils" }
nezha_vrf_lib = { path = "../nezha-vrf-lib" }

[dev-dependencies]
nezha-testing = { path = "../nezha-testing" }

anyhow = "1.0"
pretty_assertions = "1.2.1"
async-trait = "0.1"
bincode = "1.3.1"
bytemuck = "1"

solana-sdk = {workspace = true}
solana-program-test = {workspace = true}

[lib]
crate-type = ["cdylib", "lib"]
