[package]
name = "risq_api_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.53"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
format_serde_error = { version = "0.3.0", features = ["serde_json"] }
log = "0.4.14"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
rust_decimal = { version = "1.23", features = ["serde-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
# workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
env_logger = "0.9.0"
paste = "1.0.7"
tokio = { version = "1", features = ["macros"] }
