[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/gen_schema.rs"

[dependencies]
actix-http = "=3.1.0"
actix-web = "=4.1.0"
actix-web-actors = "=4.0.0"
anyhow = "1.0"
async-graphql = { version = "=3.0.31", features = ["uuid", "chrono"] }
async-graphql-actix-web = "=3.0.31"
async-graphql-derive = "=3.0.31"
borsh.workspace = true
chrono = "=0.4"
env_logger = "=0.9.3"
envconfig = "=0.10.0"
git-version = "0.3.5"
itertools = "0.10.3"
log = "=0.4.17"
rand = "0.8"
rand_chacha = "0.3.1"
serde = "1.0"
serde_json = "1.0"
service = { path = "../service" }
solana-client = {workspace = true}
solana-sdk = { workspace = true, features = ["serde_json"] }
store = { path = "../store" }
tokio.workspace = true
uuid = { version = "=0.8.2", features = ["v4"] }
zstd = { workspace = true}
zstd-safe ={workspace = true}
zstd-sys ={workspace = true}

[dev-dependencies]
async-trait = "0.1.52"
mustache = "0.9.0"
reqwest = { version = "0.11.7", features = ["json"] }
test-case = "2.0.0-rc3"
thiserror = "1.0.30"
tokio.workspace = true
tokio-postgres.workspace = true
