[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indexer_deposits"
path = "src/main_deposits.rs"

[[bin]]
name = "indexer_risq"
path = "src/main_risq.rs"

[[bin]]
name = "indexer_epochs"
path = "src/main_epoch.rs"

[[bin]]
name = "indexer_transactions"
path = "src/main_transactions.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.53"
borsh.workspace = true  
bs58 = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
cron = "0.11.0"
crossbeam-channel = "0.5.6"
deadpool-postgres.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
dotenv = "0.15.0"
env_logger = "=0.9.3"
envconfig = "=0.10.0"
futures = "0.3"
graphql_client = { version = "0.10.0", features = ["reqwest"] }
log = "0.4.14"
nezha_staking = { path = "../../../../program/nezha-staking" }
rand = "0.8"
rand_chacha = "0.3.1"
reqwest = "0.11.10"
risq_api_client = { path = "../../../risq-api-client" }
rust_decimal = { version = "1.23", features = ["serde-arbitrary-precision", "db-tokio-postgres"] }
serde = "1.0"
serde_json = "1.0"
solana-account-decoder = {workspace = true}
solana-client = {workspace = true}
solana-sdk = { workspace = true, features = ["serde_json"] }
solana-transaction-status = {workspace = true}
spl-associated-token-account = {workspace = true}
spl-token = {workspace = true}
service = { path = "../service" }
store = { path = "../store" }
thiserror = "1.0.31"
tokio.workspace = true
tokio-postgres.workspace = true
# workspace-hack = { version = "0.1", path = "../../../workspace-hack" }

[dev-dependencies]
pretty_assertions = "1.2.1"
