[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
borsh.workspace = true
chrono = "0.4.19"
futures = "0.3"
log = "0.4.14"
nezha_staking = { path = "../../../../program/nezha-staking" }
num-traits = "0.2.15"
rand = "0.8"
rand_chacha = "0.3.1"
serde = "1.0"
serde_json = "1.0"
solana-account-decoder = {workspace = true}
solana-client = {workspace = true}
solana-program = {workspace = true}
solana-program-test = {workspace = true}
solana-sdk = {workspace = true}
solana-transaction-status = {workspace = true}
spl-associated-token-account = {workspace = true}
spl-token = {workspace = true}
thiserror = "1.0.30"
tokio = "1"
uuid = { version = "=0.8.2", features = ["v4"] }
utils = { path = "../../../utils" }
nezha_vrf_lib.path = "../../../../program/nezha-vrf-lib"
# workspace-hack = { version = "0.1", path = "../../../workspace-hack" }

[dev-dependencies]
pretty_assertions = "1.2.1"
env_logger = "0.9"
