[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
chrono = "0.4.19"
deadpool-postgres.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
dotenv = "0.15.0"
envconfig = "0.10.0"
log = "0.4.14"
postgres-types = { version = "0.2.3", features = ["derive", "array-impls"] }
postgres_array = "0.11.0"
rand = "0.8"
rust_decimal = { version = "1.23", features = ["db-tokio-postgres"] }
serde = "1.0"
serde_json = "1.0"
service = { path = "../service" }
solana-sdk = {workspace = true}
tokio.workspace = true
tokio-postgres.workspace = true
url = "2.2.2"
uuid = { version = "=0.8.2", features = ["v4"] }
# workspace-hack = { version = "0.1", path = "../../../workspace-hack" }

[dev-dependencies]
pretty_assertions = "1.2.1"
tokio = "1"
